ADD modal comp, fix responsive - Finish feature

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 <body>
   <noscript>🤷‍♂️ You need to enable JavaScript ⚛️ to run this app.</noscript>
   <div id="root"></div>
+  <div id="modal"></div>
 </body>
 
 </html>
