--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/output.css">
   </head>
-  <body class="m-0 font-sans bg-iseasy-gray-100 text-iseasy-gray-400">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
