--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>MeMemory Game</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/output.css">
   </head>
   <body>
